# belief-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
belief_agent/: __init__.py  agent.py  belief_state.py  negotiation.py  reflection.py  utils.py
examples/: basic_agent.py  basic_usage.py  long_horizon_planning.py  multi_objective_negotiation.py  negotiation_demo.py  reflection_loop.py
notebooks/: 01_basic_usage.ipynb  01_quickstart.md  02_long_horizon.md  02_reflection_in_action.ipynb  03_negotiation.md  03_negotiation_scenarios.ipynb  04_advanced_multi_agent.ipynb
tests/: test_agent.py  test_belief_state.py  test_negotiation.py  test_reflection.py
