[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belief-agent"
version = "2.0.0"
description = "Explicit belief states, structured reflection loops, and human negotiation for LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nulllab", email = "team@nulllab.ai"},
]
keywords = ["llm", "agent", "belief", "reasoning", "reflection", "negotiation", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "jupyter>=1.0.0",
    "nbformat>=5.0",
]

[project.urls]
Homepage = "https://github.com/nulllabtests/belief-agent"
Repository = "https://github.com/nulllabtests/belief-agent"
Issues = "https://github.com/nulllabtests/belief-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["belief_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["belief_agent"]

[tool.coverage.report]
show_missing = true
fail_under = 70
